<resources>
    <string name="app_name">ILoveMarshmallow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Titles -->
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_product">Product Details</string>

    <!-- Launch Activity -->
    <string name="zappos">Zappos</string>

    <!-- Search -->
    <string name="hint_searchbox">Search products</string>
    <string name="search_button">Search</string>

    <!-- Sample Text -->
    <string name="sample_text_tvBrand">Nike</string>
    <string name="sample_text_tvProductName">Sneakers Size 10</string>
    <string name="sample_text_tvPrice">$99.99</string>
    <string name="sample_text_tvRating">10</string>
    <string name="sample_text_tvDescription">With roots in first generation scouting bags, the Survey from Herschel Supply Co. earns a few merit badges for clean and classic style. Spacious main compartment can hold all the daily essentials for day on or off the trail. Inside sleeve pocket built within the cotton-poly fabric lining. Custom metal buckle details with convenient magnetic snap closures. Herschel logo detail in bottom corner of bag. Leather diamond accent on top flap. Padded and adjustable straps for a comfortable fit. Shell: 100 polyester. Lining: 100 nylon.</string>

    <!-- Miscellaneous -->
    <string name="text_rating_not_found">No Ratings Found</string>
    <string name="content">content</string>
</resources>
